<resources>
    <string name="app_name">Emaktab Scholars</string>
    <string name="powered_by">Powered by Technilogics</string>
    <string name="schoolicon">school Icon</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Login</string>
    <string name="forget">Forget Password ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="education">MaktabERP</string>
    <string name="announcements">Announcements</string>
    <string name="attendence">Attendence</string>
    <string name="exam">Exam</string>
    <string name="test">Test</string>
    <string name="fee">Fees</string>
    <string name="feedback">FeedBack</string>
    <string name="phone">Phone Number</string>
    <string name="school_name">The Scholars Science School</string>
    <string name="sparkling">Sparkling Future</string>
</resources>
