<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@drawable/mainbackgroundimg3"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"


    >


    <android.support.constraint.ConstraintLayout
        android:id="@+id/co9"
        android:layout_width="match_parent"
        android:layout_height="0dp"


        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">






        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/schoolicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/scholars_new_logo" />


        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="32dp"
            app:contentPaddingBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/education"
                    android:textColor="@color/imgTint"
                    android:textColorLink="@color/design_default_color_primary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_circle_box"
                    android:clipChildren="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <LinearLayout
                        android:id="@+id/phone_img_wrapper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"

                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView2"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:paddingLeft="10dp"
                            android:paddingRight="2dp"
                            android:src="@drawable/ic_local_phone_black_24dp"
                            android:tint="@color/grey_light" />
                    </LinearLayout>

                    <EditText

                        android:id="@+id/login_phone_editbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/phone_img_wrapper"
                        android:autofillHints=""
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/phone"
                        android:inputType="number|phone"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="12dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_light"
                        android:textColorLink="@color/background" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_circle_box"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                    <LinearLayout
                        android:id="@+id/password_img_wrapper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"

                        android:orientation="vertical">

                        <ImageView

                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/password_img_wrapper"
                            android:background="@null"
                            android:paddingLeft="5dp"
                            android:paddingRight="2dp"
                            android:tint="@color/grey_light"
                            app:srcCompat="@android:drawable/ic_lock_lock" />
                    </LinearLayout>

                    <EditText

                        android:id="@+id/login_password_editbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/password_img_wrapper"
                        android:autofillHints=""
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="12dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_light"
                        android:textColorLink="@color/background" />


                </RelativeLayout>

                <Button
                    android:id="@+id/login_submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_circle_login_btn"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                    tools:text="@string/submit" />


                <!--<Button-->
                <!--android:id="@+id/login_forget_btn"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginStart="130dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:layout_marginEnd="130dp"-->
                <!--android:layout_marginBottom="5dp"-->
                <!--android:background="@null"-->
                <!--android:text="@string/forget"-->
                <!--android:textColor="@color/cute_blue"-->
                <!--android:textSize="18sp"-->
                <!--app:layout_constraintBottom_toBottomOf="parent"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/login_submit_btn" />-->


            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>




</android.support.constraint.ConstraintLayout>







